@@ -2,7 +2,7 @@
  * File utility functions.
  *
  * Author:
- *   Gonzalo Paniagua Javier (gonzalo@novell.com
+ *   Gonzalo Paniagua Javier (gonzalo@novell.com)
  *
  * (C) 2006 Novell, Inc.
  *
@@ -210,6 +210,8 @@ g_file_test (const gchar *filename, GFileTest test)
 		return FALSE;
 
 	have_stat = FALSE;
+#ifdef G_OS_WIN32
+#else
 	if ((test & G_FILE_TEST_EXISTS) != 0) {
 		if (access (filename, F_OK) == 0)
 			return TRUE;
@@ -219,12 +221,12 @@ g_file_test (const gchar *filename, GFileTest test)
 		if (access (filename, X_OK) == 0)
 			return TRUE;
 	}
-
 	if ((test & G_FILE_TEST_IS_SYMLINK) != 0) {
 		have_stat = (lstat (filename, &st) == 0);
 		if (have_stat && S_ISLNK (st.st_mode))
 			return TRUE;
 	}
+#endif
 
 	if ((test & G_FILE_TEST_IS_REGULAR) != 0) {
 		if (!have_stat)
