@@ -16,6 +16,7 @@ DEFINE_TEST_GROUP_INIT_H(spawn_tests_init);
 DEFINE_TEST_GROUP_INIT_H(timer_tests_init);
 DEFINE_TEST_GROUP_INIT_H(file_tests_init);
 DEFINE_TEST_GROUP_INIT_H(pattern_tests_init);
+DEFINE_TEST_GROUP_INIT_H(dir_tests_init);
 
 static Group test_groups [] = {	
 	{"string",    string_tests_init}, 
@@ -34,6 +35,7 @@ static Group test_groups [] = {
 	{"timer",     timer_tests_init},
 	{"file",      file_tests_init},
 	{"pattern",   pattern_tests_init},
+	{"dir",       dir_tests_init},
 	{NULL, NULL}
 };
 
